lavalamp.css
body {
    background-color: black;
    margin: 0 auto;
    font-family: "Roboto", sans-serif;
}

canvas {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
}

.ui-accordion .ui-accordion-content {
    padding: 7% 5% 14%; /* Centers the slider bars in their containers. */
}

.ui-tooltip {
    font-size: 13px;
}

.ui-slider:hover, .ui-slider-handle:hover, #settings > li.control {
    cursor: -moz-grab;
	cursor: -webkit-grab;
    background: white;
}

.ui-slider-handle:active {
    cursor: -moz-grabbing;
	cursor: -webkit-grabbing;
}

.material .option {
	padding: 2px;
	margin: 5px 0;
	outline: solid grey 1px;
	cursor: pointer;
}

#settings > li.option, .material .option {
    background: linear-gradient(to bottom, lightgrey 0%, white 50%, lightgrey 100%);
    border-radius: 2px;
}

#settings > li.option:hover, .material .option:hover {
	background: linear-gradient(to bottom, lightgrey 0%, grey 50%, lightgrey 100%);
	color: white;
}

#material_container, #preset_materials, #custom_materials {
    overflow: auto;
    /* This !important is needed to avoid jQuery automatically setting the element to a fixed size. */
    height: auto !important;
    padding: 5px 5px;
}

#settings {
    display: none;
    font-size: 17px;
	position: fixed;
    width: 210px;
	background: #696969;
    border-radius: 2px;
    cursor: pointer;
    z-index: 2;
}

#settings > li {
	margin: 2px 2px 2px;
	/* height: 25px; */
	text-align: center;
	color: black;
    /* jQuery's accordion widget sets overflow to auto dynamically; !important must be used to avoid this. */
	overflow: hidden !important;
}

#instructions {
    position: absolute;
    left: 35%;
    top: 5%;
    font-size: 30px;
    font-weight: bold;
    color: lightgrey;
    z-index: 2;
}

